--- a/modules/common/src/customFields/customSection.component.html
+++ b/modules/common/src/customFields/customSection.component.html
@@ -2,9 +2,9 @@
   <div>
     @if (sectionMeta.fields[f].type === CFT.ENUM) {
       <idea-select
-        [data]="sectionMeta.fields[f].getEnumAsSuggestion(t.getCurrentLang(), t.languages())"
+        [data]="sectionMeta.fields[f].getEnumAsSuggestion(_translate.getCurrentLang(), t.languages())"
         [lines]="lines"
-        [description]="sectionMeta.fields[f].getEnumElement(fields[f], t.getCurrentLang(), t.languages())"
+        [description]="sectionMeta.fields[f].getEnumElement(fields[f], _translate.getCurrentLang(), t.languages())"
         [label]="sectionMeta.fields[f].name | label"
         [icon]="!hideDescriptions && !disabled ? 'help-circle-outline' : null"
         [iconColor]="(sectionMeta.fields[f].description | label) ? 'primary' : 'medium'"
