fix(common): avoid item-component modals to open multiple times following multiple clicks

--- a/modules/common/src/checker/checker.component.html
+++ b/modules/common/src/checker/checker.component.html
@@ -4,6 +4,7 @@
   [lines]="lines"
   [title]="searchPlaceholder || null"
   [button]="!disabled"
+  [disabled]="isOpening"
   [class.withLabel]="label"
   (click)="fetchDataAndOpenModal()"
 >
