--- a/modules/common/src/dateTime/dateTime.component.html
+++ b/modules/common/src/dateTime/dateTime.component.html
@@ -4,6 +4,7 @@
   [lines]="lines"
   [title]="placeholder || label || ''"
   [button]="!disabled"
+  [disabled]="isOpening"
   [class.withLabel]="label"
   (click)="openCalendarPicker()"
 >
