--- a/modules/common/src/list/list.component.html
+++ b/modules/common/src/list/list.component.html
@@ -3,6 +3,7 @@
   [color]="color"
   [lines]="lines"
   [button]="!disabled"
+  [disabled]="isOpening"
   [title]="placeholder || ''"
   [class.withLabel]="label"
   (click)="openList()"
