--- a/modules/common/src/customFields/customFieldMeta.component.html
+++ b/modules/common/src/customFields/customFieldMeta.component.html
@@ -184,7 +184,9 @@
   @if (!disabled) {
     <ion-list class="obligatoryToggleList">
       <ion-item lines="none">
-        <ion-toggle [label]="'IDEA_COMMON.CUSTOM_FIELDS.OBLIGATORY' | translate" [(ngModel)]="_field.obligatory" />
+        <ion-toggle [(ngModel)]="_field.obligatory">
+          {{ 'IDEA_COMMON.CUSTOM_FIELDS.OBLIGATORY' | translate }}
+        </ion-toggle>
       </ion-item>
     </ion-list>
   }
