--- a/modules/uncommon/src/timeInterval/fromTimeToTime.component.html
+++ b/modules/uncommon/src/timeInterval/fromTimeToTime.component.html
@@ -171,7 +171,7 @@
         <ion-text [class.fromSelected]="segment === Segments.TO">
           {{ 'IDEA_UNCOMMON.FTTT.FROM' | translate }}
           @if (segment === Segments.TO) {
-            <span>{{ msToTimeString(_timeInterval.from) }}</span>
+            <span>{{ msToTimeString(timeIntervalWC.from) }}</span>
           }
         </ion-text>
         @if (segment === Segments.TO) {
