chore: use newer SCSS notation for import (use)

--- a/modules/agenda/css/global.scss
+++ b/modules/agenda/css/global.scss
@@ -1,5 +1,5 @@
 // @idea to import in project's global.scss; example:
-// @import '../node_modules/@idea-ionic/agenda/css/global.scss';
+// @use '../node_modules/@idea-ionic/agenda/css/global.scss';
 
 idea-agenda .agenda {
   --idea-agenda-marker-color: var(--ion-color-primary);
