--- a/modules/map/css/global.scss
+++ b/modules/map/css/global.scss
@@ -1,5 +1,5 @@
 // @idea to import in project's global.scss; example:
-// @import '../node_modules/@idea-ionic/map/css/global.scss';
+// @use '../node_modules/@idea-ionic/map/css/global.scss';
 
 idea-map {
   display: none;
