--- a/modules/common/css/global.scss
+++ b/modules/common/css/global.scss
@@ -1,5 +1,5 @@
 // @idea to import in project's global.scss; example:
-// @import '../node_modules/@idea-ionic/common/css/global.scss';
+// @use '../node_modules/@idea-ionic/common/css/global.scss';
 
 .selectable {
   -webkit-user-select: text !important;
