--- a/modules/uncommon/css/global.scss
+++ b/modules/uncommon/css/global.scss
@@ -1,5 +1,5 @@
 // @idea to import in project's global.scss; example:
-// @import '../node_modules/@idea-ionic/uncommon/css/global.scss';
+// @use '../node_modules/@idea-ionic/uncommon/css/global.scss';
 
 .announcementCard,
 .echoCard {
