--- a/modules/editor/css/global.scss
+++ b/modules/editor/css/global.scss
@@ -1,29 +1,30 @@
 // @idea to import in project's global.scss; example:
 // @use '../node_modules/@idea-ionic/editor/css/global.scss';
 
-IDEAHTMLEditorComponent {
-  :root {
-    --idea-html-editor-background-color: var(--ion-color-light);
-    --idea-html-editor-border-color: var(--ion-color-light-shade);
-    --idea-html-editor-color: var(--ion-color-light-contrast);
-    --idea-html-editor-toolbar-background-color: var(--ion-color-light);
-    --idea-html-editor-toolbar-color: var(--ion-color-light-contrast);
-    --idea-html-editor-toolbar-border-color: var(--ion-color-light);
-    --idea-html-editor-button-background-color: var(--ion-color-light);
-    --idea-html-editor-button-border-color: var(--ion-color-light);
-    --idea-html-editor-button-color: var(--ion-color-light-contrast);
-    --idea-html-editor-button-focused: var(--ion-color-medium);
-    --idea-html-editor-button-selected: var(--ion-color-medium-tint);
+:root {
+  --idea-html-editor-background-color: var(--ion-color-light);
+  --idea-html-editor-border-color: var(--ion-color-light-shade);
+  --idea-html-editor-color: var(--ion-color-light-contrast);
+  --idea-html-editor-toolbar-background-color: var(--ion-color-light);
+  --idea-html-editor-toolbar-color: var(--ion-color-light-contrast);
+  --idea-html-editor-toolbar-border-color: var(--ion-color-light);
+  --idea-html-editor-button-background-color: var(--ion-color-light);
+  --idea-html-editor-button-border-color: var(--ion-color-light);
+  --idea-html-editor-button-color: var(--ion-color-light-contrast);
+  --idea-html-editor-button-focused: var(--ion-color-medium);
+  --idea-html-editor-button-selected: var(--ion-color-medium-tint);
 
-    --idea-html-editor-view-margin: 0;
-    --idea-html-editor-view-padding: 20px;
-    --idea-html-editor-view-background-color: var(--ion-color-white);
-    --idea-html-editor-view-color: var(--ion-color-white-contrast);
-    --idea-html-editor-view-box-shadow: none;
-    --idea-html-editor-view-border-width: 1px;
-    --idea-html-editor-view-border-color: var(--ion-border-color);
-    --idea-html-editor-view-border-radius: 0;
-  }
+  --idea-html-editor-view-margin: 0;
+  --idea-html-editor-view-padding: 20px;
+  --idea-html-editor-view-background-color: var(--ion-color-white);
+  --idea-html-editor-view-color: var(--ion-color-white-contrast);
+  --idea-html-editor-view-box-shadow: none;
+  --idea-html-editor-view-border-width: 1px;
+  --idea-html-editor-view-border-color: var(--ion-border-color);
+  --idea-html-editor-view-border-radius: 0;
+}
+
+idea-html-editor {
   ::ng-deep {
     .angular-editor-wrapper {
       background-color: transparent !important;
