feat(common): inline checker with searchbar mode

--- a/modules/common/css/global.scss
+++ b/modules/common/css/global.scss
@@ -57,7 +57,11 @@
 }
 
 ion-popover.popoverLarge::part(content) {
-  width: 350px;
+  width: 500px;
+  max-height: 600px;
+  @media only screen and (max-width: 767px) {
+    width: 350px;
+  }
 }
 
 ion-modal.modalFullScreen {
